syntax = "proto3";

package pb;

option go_package = "github.com/matodrobec/simplebank/pb";

message VerifyEamilRequest {
  int64 email_id = 1;
  string secret_code = 2;

}

message VerifyEamilResponse {
  bool is_verified = 1;
}
